--- a/style.css
+++ b/style.css
@@ -1,16 +1,62 @@
+@font-face {
+    font-family: Compagnon;
+    font-weight: Italic;
+    src: url("fonts/Compagnon-Italic.woff") format("woff");
+}
+
+@font-face {
+    font-family: Compagnon;
+    font-weight: Medium;
+    src: url("fonts/Compagnon-Medium.woff") format("woff");
+}
+
+@font-face {
+    font-family: Millimetre;
+    font-weight: Bold;
+    src: url("fonts/Millimetre-Bold.otf") format("opentype");
+}
+
+@font-face {
+    font-family: Millimetre;
+    font-weight: Regular;
+    src: url("fonts/Millimetre-Regular.otf") format("opentype");
+}
+
+p{
+  font-family: Compagnon;
+  font-style: Medium;
+}
+
+h1{
+  font-family: Millimetre;
+  font-style: Bold;
+}
+
+h2{
+  font-family: Compagnon;
+  font-style: Medium;
+}
+
 body{
-  background-color: #fdf5e8;
+  background-color: #ffffff;
   color: black;
   text-align: center;
 }
+
 h3{
   color: black;
   font-size: .75em;
 }
+
 div.scrollmenu {
-  background-color: #333;
+  background-color: white;
   overflow: auto;
   white-space: nowrap;
+  border: solid;
+  border-left-color: white;
+  border-right-color: white;
+  border-top-color:black;
+  border-bottom-color: black;
 }
 
 div.scrollmenu a {
@@ -28,10 +74,11 @@ div.scrollmenu a:hover {
 div.opening{
   font-size: .75em;
 }
+
 .MyButton{
-  background-color: #555555;
+  background-color: white;
   border: none;
-  color: white;
+  color: black;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -39,4 +86,147 @@ div.opening{
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
+  font-family: Millimetre;
+  font-style: Bold;
+  border: solid;
+  border-color: black;
+  word-spacing: 10px;
 }
+
+.about{
+  font-family: Compagnon;
+  font-style: Medium;
+}
+
+.scrollmessage{
+    padding: 5px;
+    font-family: Compagnon;
+    font-style: Regular;
+    font-weight: Medium;
+    font-size: 30px;
+    word-spacing: 200px;
+    color: black;
+}
+
+.storyImage{
+  border: 4px solid #000000;
+  border-radius: 4px;
+  width: 100%;
+  max-width: 500px;
+}
+
+
+/* these are the style elemtns for the carousel*/
+
+
+*{
+  box-sizing: border-box;
+}
+h1,
+p {
+  text-align: center;
+}
+p {
+  width: 100%;
+  max-width: 500px;
+  margin: auto;
+}
+a:link,
+a:hover,
+a:active,
+a:visited {
+  transition: color 150ms;
+  color: #95a5a6;
+  text-decoration: none;
+}
+a:hover {
+  color: #7f8c8d;
+  text-decoration: underline;
+}
+.contain {
+  width: 100%;
+}
+.row {
+  overflow: scroll;
+  width: 100%;
+}
+.row__inner {
+  transition: 450ms -webkit-transform;
+  transition: 450ms transform;
+  transition: 450ms transform, 450ms -webkit-transform;
+  font-size: 0;
+  white-space: nowrap;
+  margin: 70.3125px 0;
+  padding-bottom: 10px;
+}
+.tile {
+  position: relative;
+  display: inline-block;
+  width: 200px;
+  height: 300px;
+  margin-right: 25px;
+  margin-left: 25px;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+  transition: 450ms all;
+  -webkit-transform-origin: center left;
+          transform-origin: center left;
+}
+.tile__img {
+  width: 200px;
+  height: 300px;
+  border: solid;
+  border-color: black;
+  border-width: 4pt;
+  border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.tile__details {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  font-size: 10px;
+  opacity: 0;
+  /* background-color: black; */
+  transition: 450ms opacity;
+}
+.tile__details:after,
+.tile__details:before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: #000;
+}
+.tile:hover .tile__details {
+  opacity: 1;
+}
+.tile__title {
+  position: absolute;
+  bottom: 0;
+  padding: 10px;
+}
+.row__inner:hover {
+  -webkit-transform: translate3d(-62.5px, 0, 0);
+          transform: translate3d(-62.5px, 0, 0);
+}
+.row__inner:hover .tile {
+  opacity: 0.3;
+}
+.row__inner:hover .tile:hover {
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+  opacity: 1;
+}
+.tile:hover ~ .tile {
+  -webkit-transform: translate3d(125px, 0, 0);
+          transform: translate3d(125px, 0, 0);
+}
+
+
+/* these are the style elemtns for the carousel*/
